modified:   06_CD4017B.cache/wt/project.wpc 	modified:   06_CD4017B.cache/wt/synthesis.wdf 	modified:   06_CD4017B.cache/wt/synthesis_details.wdf 	new file:   06_CD4017B.cache/wt/webtalk_pa.xml 	modified:   06_CD4017B.cache/wt/xsim.wdf 	new file:   06_CD4017B.runs/.jobs/vrs_config_14.xml 	new file:   06_CD4017B.runs/.jobs/vrs_config_15.xml 	new file:   06_CD4017B.runs/.jobs/vrs_config_16.xml 	new file:   06_CD4017B.runs/.jobs/vrs_config_17.xml 	new file:   06_CD4017B.runs/.jobs/vrs_config_18.xml 	new file:   06_CD4017B.runs/.jobs/vrs_config_19.xml 	new file:   06_CD4017B.runs/.jobs/vrs_config_20.xml 	new file:   06_CD4017B.runs/.jobs/vrs_config_21.xml 	new file:   06_CD4017B.runs/.jobs/vrs_config_22.xml 	new file:   06_CD4017B.runs/.jobs/vrs_config_23.xml 	new file:   06_CD4017B.runs/.jobs/vrs_config_24.xml 	new file:   06_CD4017B.runs/.jobs/vrs_config_25.xml 	new file:   06_CD4017B.runs/.jobs/vrs_config_26.xml 	new file:   06_CD4017B.runs/.jobs/vrs_config_27.xml 	new file:   06_CD4017B.runs/.jobs/vrs_config_28.xml 	modified:   06_CD4017B.runs/synth_1/.vivado.begin.rst 	modified:   06_CD4017B.runs/synth_1/CD4017B.dcp 	modified:   06_CD4017B.runs/synth_1/CD4017B.tcl 	modified:   06_CD4017B.runs/synth_1/CD4017B.vds 	modified:   06_CD4017B.runs/synth_1/CD4017B_utilization_synth.pb 	modified:   06_CD4017B.runs/synth_1/CD4017B_utilization_synth.rpt 	modified:   06_CD4017B.runs/synth_1/ISEWrap.js 	modified:   06_CD4017B.runs/synth_1/ISEWrap.sh 	modified:   06_CD4017B.runs/synth_1/gen_run.xml 	modified:   06_CD4017B.runs/synth_1/htr.txt 	modified:   06_CD4017B.runs/synth_1/project.wdf 	modified:   06_CD4017B.runs/synth_1/rundef.js 	modified:   06_CD4017B.runs/synth_1/runme.bat 	modified:   06_CD4017B.runs/synth_1/runme.log 	modified:   06_CD4017B.runs/synth_1/runme.sh 	modified:   06_CD4017B.runs/synth_1/vivado.jou 	modified:   06_CD4017B.runs/synth_1/vivado.pb 	modified:   06_CD4017B.sim/sim_1/behav/xsim/CD4017B_Testbench.tcl 	modified:   06_CD4017B.sim/sim_1/behav/xsim/C

--- a/06_CD4017B.runs/synth_1/.vivado.begin.rst
+++ b/06_CD4017B.runs/synth_1/.vivado.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="ADMIN" Host="DESKTOP-QBCQ4N2" Pid="7016" HostCore="12" HostMemory="016890519552">
+    <Process Command="vivado" Owner="minun" Host="minun-LOQ" Pid="19510" HostCore="12" HostMemory="16092608">
     </Process>
 </ProcessHandle>
